crates/libs/frieze/tests/ui/vec_of_maybe.stderr
error: frieze: Vec<Maybe<T>> is not allowed; array elements are always present on the wire. Use Vec<Option<T>> if elements may be null.
 --> tests/ui/vec_of_maybe.rs:5:8
  |
5 |     x: Vec<Maybe<String>>,
  |        ^^^^^^^^^^^^^^^^^^
