crates/libs/frieze/tests/ui/vec_of_maybe.rs
use frieze::{Maybe, Schema};

#[derive(Schema)]
struct S {
    x: Vec<Maybe<String>>,
}

fn main() {}
